# knoda5-hkc

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  config.h  config.h.in  configure  configure.in  doxygen.config
hk_classes/: Makefile.am  Makefile.in  hk_actionquery.cpp  hk_actionquery.h  hk_button.cpp  hk_button.h  hk_class.cpp  hk_class.h  hk_classes.h  hk_colour.cpp  hk_colour.h  hk_column.cpp  hk_column.h  hk_connection.cpp  hk_connection.h  hk_data.cpp  hk_data.h  hk_database.cpp  hk_database.h  hk_datasource.cpp  hk_datasource.h  hk_datetime.cpp  hk_datetime.h  hk_dbvisible.cpp  hk_dbvisible.h  hk_definitions.cpp  hk_definitions.h  hk_drivermanager.cpp  hk_drivermanager.h  hk_dsboolean.cpp  hk_dsboolean.h  hk_dscombobox.cpp  hk_dscombobox.h  hk_dsdatavisible.cpp  hk_dsdatavisible.h  hk_dsdate.cpp  hk_dsdate.h  hk_dsgrid.cpp  hk_dsgrid.h  hk_dsgridcolumn.cpp  (+64 more)
hk_dbaseclasses/: Makefile.am  Makefile.in  hk_dbaseactionquery.cpp  hk_dbaseactionquery.h  hk_dbasecolumn.cpp  hk_dbasecolumn.h  hk_dbaseconnection.cpp  hk_dbaseconnection.h  hk_dbasedatabase.cpp  hk_dbasedatabase.h  hk_dbasedatasource.cpp  hk_dbasedatasource.h  hk_dbaseresultquery.cpp  hk_dbaseresultquery.h  hk_dbasetable.cpp  hk_dbasetable.h
hk_dbaseclasses/xbase/: xbase64.cpp  xbase64.h  xbcdx.h  xbdate.cpp  xbdate.h  xbdbf.cpp  xbdbf.h  xbexp.cpp  xbexp.h  xbexpfnc.cpp  xbexpprc.cpp  xbfields.cpp  xbfile.cpp  xbfile.h  xbfilter.cpp  xbindex.cpp  xbindex.h  xblock.cpp  xbmemo.cpp  xbmindex.h  xbndx.cpp  xbndx.h  xbntx.cpp  xbntx.h  xbstring.cpp  xbstring.h  xbtypes.h
hk_firebirdclasses/: Makefile.am  Makefile.in  hk_firebirdactionquery.cpp  hk_firebirdactionquery.h  hk_firebirdcolumn.cpp  hk_firebirdcolumn.h  hk_firebirdconnection.cpp  hk_firebirdconnection.h  hk_firebirddatabase.cpp  hk_firebirddatabase.h  hk_firebirddatasource.cpp  hk_firebirddatasource.h  hk_firebirdresultquery.cpp  hk_firebirdresultquery.h  hk_firebirdtable.cpp  hk_firebirdtable.h  hk_firebirdview.cpp  hk_firebirdview.h
hk_mdbclasses/: Makefile.am  Makefile.in  hk_mdbcolumn.cpp  hk_mdbcolumn.h  hk_mdbconnection.cpp  hk_mdbconnection.h  hk_mdbdatabase.cpp  hk_mdbdatabase.h  hk_mdbdatasource.cpp  hk_mdbdatasource.h  hk_mdbresultquery.cpp  hk_mdbresultquery.h  hk_mdbtable.cpp  hk_mdbtable.h
hk_mdbclasses/mdbtools/: file.c  mdbtools.h
hk_mysqlclasses/: Makefile.am  Makefile.in  hk_mysqlactionquery.cpp  hk_mysqlactionquery.h  hk_mysqlcolumn.cpp  hk_mysqlcolumn.h  hk_mysqlconnection.cpp  hk_mysqlconnection.h  hk_mysqldatabase.cpp  hk_mysqldatabase.h  hk_mysqldatasource.cpp  hk_mysqldatasource.h  hk_mysqlresultquery.cpp  hk_mysqlresultquery.h  hk_mysqltable.cpp  hk_mysqltable.h  hk_mysqlview.cpp  hk_mysqlview.h
hk_odbcclasses/: Makefile.am  Makefile.in  hk_odbcactionquery.cpp  hk_odbcactionquery.h  hk_odbccolumn.cpp  hk_odbccolumn.h  hk_odbcconnection.cpp  hk_odbcconnection.h  hk_odbcdatabase.cpp  hk_odbcdatabase.h  hk_odbcdatasource.cpp  hk_odbcdatasource.h  hk_odbcresultquery.cpp  hk_odbcresultquery.h  hk_odbctable.cpp  hk_odbctable.h  hk_odbcview.cpp  hk_odbcview.h
hk_paradoxclasses/: Makefile.am  Makefile.in  hk_paradoxactionquery.cpp  hk_paradoxactionquery.h  hk_paradoxcolumn.cpp  hk_paradoxcolumn.h  hk_paradoxconnection.cpp  hk_paradoxconnection.h  hk_paradoxdatabase.cpp  hk_paradoxdatabase.h  hk_paradoxdatasource.cpp  hk_paradoxdatasource.h  hk_paradoxresultquery.cpp  hk_paradoxresultquery.h  hk_paradoxtable.cpp  hk_paradoxtable.h
hk_paradoxclasses/pxlib/: paradox.c  paradox.h  px_head.c  px_misc.c  pxversion.h
hk_postgresclasses/: Makefile.am  Makefile.in  hk_postgresqlactionquery.cpp  hk_postgresqlactionquery.h  hk_postgresqlcolumn.cpp  hk_postgresqlcolumn.h  hk_postgresqlconnection.cpp  hk_postgresqlconnection.h  hk_postgresqldatabase.cpp  hk_postgresqldatabase.h  hk_postgresqldatasource.cpp  hk_postgresqldatasource.h  hk_postgresqlresultquery.cpp  hk_postgresqlresultquery.h  hk_postgresqltable.cpp  hk_postgresqltable.h  hk_postgresqlview.cpp  hk_postgresqlview.h
hk_sqlite3classes/: Makefile.am  Makefile.in  hk_sqlite3actionquery.cpp  hk_sqlite3actionquery.h  hk_sqlite3column.cpp  hk_sqlite3column.h  hk_sqlite3connection.cpp  hk_sqlite3connection.h  hk_sqlite3database.cpp  hk_sqlite3database.h  hk_sqlite3datasource.cpp  hk_sqlite3datasource.h  hk_sqlite3resultquery.cpp  hk_sqlite3resultquery.h  hk_sqlite3table.cpp  hk_sqlite3table.h  hk_sqlite3view.cpp  hk_sqlite3view.h
hk_sqlite3classes/sqlite/: alter.c  analyze.c  attach.c  auth.c  btree.c  btree.h  build.c  callback.c  complete.c  date.c  delete.c  expr.c  func.c  hash.c  hash.h  insert.c  legacy.c  main.c  pager.c  pager.h  pragma.c  prepare.c  random.c  select.c  shell.c  sqlite3.h  sqliteInt.h  tclsqlite.c  tokenize.c  update.c  utf.c  util.c  vacuum.c  vdbe.c  vdbe.h  where.c
hk_sqliteclasses/: Makefile.am  Makefile.in  hk_sqliteactionquery.cpp  hk_sqliteactionquery.h  hk_sqlitecolumn.cpp  hk_sqlitecolumn.h  hk_sqliteconnection.cpp  hk_sqliteconnection.h  hk_sqlitedatabase.cpp  hk_sqlitedatabase.h  hk_sqlitedatasource.cpp  hk_sqlitedatasource.h  hk_sqliteresultquery.cpp  hk_sqliteresultquery.h  hk_sqlitetable.cpp  hk_sqlitetable.h  hk_sqliteview.cpp  hk_sqliteview.h
hk_sqliteclasses/sqlite/: attach.c  auth.c  btree.c  btree.h  btree_rb.c  build.c  (+26 more)
hk_xbaseclasses/: Makefile.am  Makefile.in  hk_xbaseactionquery.cpp  hk_xbaseactionquery.h  hk_xbasecolumn.cpp  hk_xbasecolumn.h  hk_xbaseconnection.cpp  hk_xbaseconnection.h  hk_xbasedatabase.cpp  hk_xbasedatabase.h  hk_xbasedatasource.cpp  hk_xbasedatasource.h  hk_xbaseresultquery.cpp  hk_xbaseresultquery.h  hk_xbasetable.cpp  hk_xbasetable.h
python/: Makefile.am  Makefile.in  hk_classes.py  hk_classes_wrap.cxx  setup.py.in
utilities/: Makefile.am  Makefile.in  hk_actionquery.1man  hk_actionqueryutility.cpp  hk_dbcopy.1man  hk_dbcopyutility.cpp  hk_exportcsv.1man  hk_exportcsvutility.cpp  hk_exporthtml.1man  hk_exporthtmlutility.cpp  hk_exportxml.1man  hk_exportxmlutility.cpp  hk_importcsv.1man  hk_importcsvutility.cpp  hk_report.1man  hk_reportutility.cpp
(+16 files in other folders)
